--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.3.0",
+    "axios": "^0.18.0",
+    "classnames": "^2.2.5",
     "d3": "^4.13.0",
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
@@ -23,7 +25,8 @@
     "babel-plugin-import": "^1.6.7",
     "mobx-react-devtools": "^5.0.0",
     "node-sass": "^4.7.2",
-    "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
+    "react-app-rewire-css-modules":
+      "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.5.0",
