--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
     "mobx-react-router": "^4.0.1",
+    "node-schedule": "^1.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "rethinkdb": "^2.3.3"
   },
   "proxy": {
     "/horizon": {
@@ -34,8 +36,7 @@
     "babel-plugin-import": "^1.6.7",
     "mobx-react-devtools": "^5.0.0",
     "node-sass": "^4.7.2",
-    "react-app-rewire-css-modules":
-      "github:codebandits/react-app-rewire-css-modules",
+    "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.5.0",
