--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     }
   },
   "scripts": {
-    "start": "react-app-rewired start & node './server/index.js'",
+    "start": "react-app-rewired build & node ./server/index.js",
+    "dev": "react-app-rewired start & node './server/index.js'",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
@@ -36,7 +37,8 @@
     "babel-plugin-import": "^1.6.7",
     "mobx-react-devtools": "^5.0.0",
     "node-sass": "^4.7.2",
-    "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
+    "react-app-rewire-css-modules":
+      "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.5.0",
