--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "/horizon": {
       "target": "ws://localhost:52002",
       "ws": true
+    },
+    "/api/*": {
+      "target": "http://localhost:52002"
     }
   },
   "scripts": {
@@ -40,7 +43,8 @@
     "babel-plugin-import": "^1.6.7",
     "mobx-react-devtools": "^5.0.0",
     "node-sass": "^4.7.2",
-    "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
+    "react-app-rewire-css-modules":
+      "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.5.0",
