--- a/package.json
+++ b/package.json
@@ -13,28 +13,33 @@
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
     "mobx-react-router": "^4.0.1",
+    "msgpack-lite": "^0.1.26",
     "multer": "^1.3.0",
+    "multiparty": "^4.1.4",
     "node-schedule": "^1.3.0",
+    "papaparse": "^4.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-virtualized": "^9.19.1",
     "rethinkdb": "^2.3.3",
     "uuid": "^3.2.1"
   },
   "proxy": {
     "/horizon": {
-      "target": "ws://localhost:52002",
+      "target": "ws://localhost:53002",
       "ws": true
     },
     "/api/*": {
-      "target": "http://localhost:52002"
+      "target": "http://localhost:53002"
     }
   },
   "scripts": {
     "start": "react-app-rewired build & node ./server/index.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
+    "fdev": "react-app-rewired start",
     "server": "node ./server/index.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
@@ -44,8 +49,7 @@
     "babel-plugin-import": "^1.6.7",
     "mobx-react-devtools": "^5.0.0",
     "node-sass": "^4.7.2",
-    "react-app-rewire-css-modules":
-      "github:codebandits/react-app-rewire-css-modules",
+    "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.5.0",
