--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "1.1.1",
     "react-virtualized": "^9.19.1",
     "rethinkdb": "^2.3.3",
+    "spark-md5": "^3.0.0",
     "uuid": "^3.2.1"
   },
   "proxy": {
