send chart data

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "start": "react-app-rewired build & node ./server/index.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
-    "fdev": "react-app-rewired start",
+    "fdev": "react-app-rewired start & node ./server/index.js",
     "server": "node ./server/index.js",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
