--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "antd": "^3.3.0",
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "connect-redis": "^3.3.3",
     "d3": "^4.13.0",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "ioredis": "^4.0.0",
     "lodash": "^4.17.5",
     "mobx": "^4.1.0",
     "mobx-react": "^5.0.0",
     "mobx-react-router": "^4.0.1",
+    "module-alias": "^2.1.0",
     "msgpack-lite": "^0.1.26",
     "multer": "^1.3.0",
     "multiparty": "^4.1.4",
@@ -21,6 +24,7 @@
     "papaparse": "^4.4.0",
     "pm2": "^2.10.4",
     "react": "^16.2.0",
+    "react-app-rewire-less-modules": "^1.3.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -35,7 +39,8 @@
     "start": "react-app-rewired build & node ./server/index.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
     "fdev": "react-app-rewired start & node ./server/index.js",
-    "server": "node ./server/index.js",
+    "frontend": "react-app-rewired start",
+    "server": "node server",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
@@ -49,5 +54,11 @@
     "react-app-rewire-mobx": "^1.0.7",
     "react-app-rewired": "^1.5.0",
     "sass-loader": "^6.0.7"
+  },
+  "_moduleAliases": {
+    "wss": "server/webSocket",
+    "logger": "server/logger",
+    "redis": "server/redis",
+    "config": "config"
   }
 }
