--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "^4.13.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "ioredis": "^4.0.0",
     "lodash": "^4.17.5",
     "mobx": "^4.1.0",
