--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "papaparse": "^4.4.0",
     "pm2": "^2.10.4",
     "react": "^16.2.0",
-    "react-app-rewire-less-modules": "^1.3.0",
+    "react-app-rewire-less-modules": "1.1.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
