--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-schedule": "^1.3.0",
     "papaparse": "^4.4.0",
     "pm2": "^2.10.4",
+    "rc-slider": "^8.6.3",
     "react": "^16.2.0",
     "react-app-rewire-less-modules": "1.1.0",
     "react-dom": "^16.2.0",
