--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "connect-redis": "^3.3.3",
+    "cross-env": "^5.2.0",
     "d3": "^4.13.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
