--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
+    "http-proxy-middleware": "^0.19.0",
     "ioredis": "^4.0.0",
     "lodash": "^4.17.5",
     "mobx": "^4.1.0",
