--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.1",
     "multiparty": "^4.2.1",
     "node-schedule": "^1.3.0",
+    "nodemailer": "^5.1.1",
     "papaparse": "^4.6.1",
     "pm2": "^2.10.4",
     "react": "^16.6.1",
