--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
     "react-app-rewired": "^1.6.2",
+    "react-waypoint": "^8.1.0",
     "sass-loader": "^6.0.7"
   },
   "_moduleAliases": {
