--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "connect-redis": "^3.4.0",
     "cross-env": "^5.2.0",
+    "customize-cra": "^0.2.12",
     "d3": "^4.13.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -27,20 +29,12 @@
     "react-dom": "^16.6.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^2.1.8",
     "react-virtualized": "^9.21.0",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
   },
-  "proxy": {
-    "/ws": {
-      "target": "ws://localhost:9080",
-      "ws": true
-    },
-    "/": {
-      "target": "http://localhost:9080"
-    }
-  },
+  "proxy": "http://localhost:9080",
   "scripts": {
     "start": "react-app-rewired build && rm -rf static && mv build static && node ./server/index.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
@@ -58,7 +52,7 @@
     "node-sass": "^4.10.0",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
-    "react-app-rewired": "^1.6.2",
+    "react-app-rewired": "^2.1.1",
     "react-waypoint": "^8.1.0",
     "sass-loader": "^6.0.7"
   },
@@ -69,5 +63,11 @@
     "config": "config",
     "restriction": "server/restriction",
     "command": "command"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
