--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.12.0",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -31,6 +35,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-virtualized": "^9.21.0",
+    "typescript": "^3.3.4000",
     "uuid": "^3.3.2",
     "ws": "^6.1.0"
   },
