--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^11.12.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
+    "amqplib": "^0.5.3",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -23,7 +24,7 @@
     "ioredis": "^4.2.0",
     "lodash": "^4.17.11",
     "mobx": "^4.6.0",
-    "mobx-react": "^5.3.6",
+    "mobx-react": "^6.0.0-rc.4",
     "mobx-react-router": "^4.0.5",
     "module-alias": "^2.1.0",
     "nodemailer": "^5.1.1",
