--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^11.12.0",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
+    "@types/react-router-dom": "^4.3.1",
     "amqplib": "^0.5.3",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
@@ -17,6 +18,7 @@
     "cross-env": "^5.2.0",
     "customize-cra": "^0.2.12",
     "d3": "^4.13.0",
+    "easy-peasy": "^2.1.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
