--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "fdev": "react-app-rewired start & node ./server/index.js",
     "frontend": "react-app-rewired start",
     "server": "node server",
+    "ts-node": "ts-node --project ./tsconfig.server.json server",
     "nodemon": "nodemon server",
     "build": "react-app-rewired build && rm -rf static && mv build static",
     "test": "react-app-rewired test --env=jsdom",
@@ -62,7 +63,8 @@
     "react-app-rewire-mobx": "^1.0.9",
     "react-app-rewired": "^2.1.1",
     "react-waypoint": "^8.1.0",
-    "sass-loader": "^6.0.7"
+    "sass-loader": "^6.0.7",
+    "ts-node": "^8.1.0"
   },
   "_moduleAliases": {
     "wss": "server/webSocket",
