--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,6 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "checkJs": false
+    "checkJs": false,
+    "isolatedModules": false,
+    "strict": false
   }
 }
