--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 BACKEND_PORT=9080
 REDIS_USERNAME=redismaster
 REDIS_PASSWORD=redis123321eq
-REQUEST_QUEUE=taskQueue
-RESULT_QUEUE=resultDataQueue
+REQUEST_QUEUE=task
+RESULT_QUEUE=request
 QUEUE_PERIOD=60
 SCHEDULE_PERIOD=60
 MAX_CONCURRENCY_SCHEDULE=2
@@ -30,3 +30,15 @@ SCHEDULE_SERVICE=http://192.168.0.134:4014
 SCHEMA_SERVICE=http://192.168.0.134:4015
 TASK_SERVICE=http://192.168.0.134:4016
 USER_SERVICE=http://192.168.0.134:4017
+
+AMQPLIB_PROTOCOL=amqp
+AMQPLIB_HOSTNAME=192.168.0.134
+AMQPLIB_PORT=5672
+AMQPLIB_USERNAME=admin
+AMQPLIB_PASSWORD=admin
+AMQPLIB_LOCALE=en_US
+AMQPLIB_FRAMEMAX=0
+AMQPLIB_HEARTBEAT=0
+AMQPLIB_VHOST=/
+
+QUEUE_RESULT=result.top.pipeline;result.top.ping;result.top.listCommand;result.top.histgramPlot;result.top.etlBase;result.top.dataView;result.top.createNewVariable;result.top.correlationMatrix;result.top.univariatePlot;result.outlier.train;result.outlier.preTrainImportance;result.outlier.ping;result.outlier.outlierPlot;result.outlier.listCommand;result.outlier.etl;result.outlier.deploy;result.outlier.applyWeights;result.clustering.train;result.clustering.ssPlot;result.clustering.preTrainImportance;result.clustering.ping;result.clustering.listCommand;result.clustering.etlOutlier;result.clustering.etl;result.clustering.doOutlier;result.clustering.deploy;result.clustering.applyWeights;result.clfreg.univariatePlot;result.clfreg.train;result.clfreg.preTrainImportance;result.clfreg.permutationImportance;result.clfreg.etl;result.clfreg.deploy
