--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.5.11",
     "babel-plugin-import": "^1.11.0",
     "mobx-react-devtools": "^5.0.1",
     "node-sass": "^4.10.0",
