--- a/package.json
+++ b/package.json
@@ -57,7 +57,13 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.11",
+    "@types/echarts": "^4.1.9",
+    "@types/lodash": "^4.14.123",
+    "@types/rc-slider": "^8.6.3",
     "babel-plugin-import": "^1.11.0",
+    "echarts": "^4.2.1",
+    "echarts-for-react": "^2.0.15-beta.0",
+    "echarts-gl": "^1.1.1",
     "mobx-react-devtools": "^5.0.1",
     "node-sass": "^4.10.0",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
@@ -65,6 +71,7 @@
     "react-app-rewired": "^2.1.1",
     "react-waypoint": "^8.1.0",
     "sass-loader": "^6.0.7",
+    "superagent": "^5.0.5",
     "ts-node": "^8.1.0"
   },
   "_moduleAliases": {
