--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,44 @@
-export BACKEND_PORT=9080
-export REDIS_USERNAME=redismaster
-export REDIS_PASSWORD=redis123321eq
-export REQUEST_QUEUE=task
-export RESULT_QUEUE=request
-export QUEUE_PERIOD=60
-export SCHEDULE_PERIOD=60
-export MAX_CONCURRENCY_SCHEDULE=2
-export SECRET=FNcidLwifNC902LCC9f2C
-export REDIS_SENTINEL_HOSTS=
-export REDIS_HOST=192.168.0.133:6379
-export REDIS_TYPE=1
-export PASSWORD=7788414
-export REACT_APP_NGINX_BACKEND=1
-export R2HOST=http://127.0.0.1:3000/
-export APP_LOGIN_BFF=http://192.168.0.133:4001
-export AUTH_SERVICE=http://192.168.0.133:4002
-export DEPLOYMENT_SERVICE=http://192.168.0.133:4003
-export DSL_SERVICE=http://192.168.0.133:4004
-export ETL_SERVICE=http://192.168.0.133:4005
-export GRAPHIC_SERVICE=http://192.168.0.133:4006
-export JOB_SERVICE=http://192.168.0.133:4007
-export MODEL_SERVICE=http://192.168.0.133:4008
-export PLAN_SERVICE=http://192.168.0.133:4009
-export PROJECT_SERVICE=http://192.168.0.133:4010
-export PROPELLER_BFF=http://192.168.0.133:4011
-export SAAS_BFF=http://192.168.0.133:4012
-export SAAS_LOGIN_BFF=http://192.168.0.133:4013
-export SCHEDULE_SERVICE=http://192.168.0.133:4014
-export SCHEMA_SERVICE=http://192.168.0.133:4015
-export TASK_SERVICE=http://192.168.0.133:4016
-export USER_SERVICE=http://192.168.0.133:4017
+BACKEND_PORT=9080
+REDIS_USERNAME=redismaster
+REDIS_PASSWORD=redis123321eq
+REQUEST_QUEUE=task
+RESULT_QUEUE=request
+QUEUE_PERIOD=60
+SCHEDULE_PERIOD=60
+MAX_CONCURRENCY_SCHEDULE=2
+SECRET=FNcidLwifNC902LCC9f2C
+REDIS_SENTINEL_HOSTS=
+REDIS_HOST=192.168.0.133:6379
+REDIS_TYPE=1
+PASSWORD=7788414
+REACT_APP_NGINX_BACKEND=1
+R2HOST=http://127.0.0.1:3000/
+APP_LOGIN_BFF=http://192.168.0.133:4001
+AUTH_SERVICE=http://192.168.0.133:4002
+DEPLOYMENT_SERVICE=http://192.168.0.133:4003
+DSL_SERVICE=http://192.168.0.133:4004
+ETL_SERVICE=http://192.168.0.133:4005
+GRAPHIC_SERVICE=http://192.168.0.133:4006
+JOB_SERVICE=http://192.168.0.133:4007
+MODEL_SERVICE=http://192.168.0.133:4008
+PLAN_SERVICE=http://192.168.0.133:4009
+PROJECT_SERVICE=http://192.168.0.133:4010
+PROPELLER_BFF=http://192.168.0.133:4011
+SAAS_BFF=http://192.168.0.133:4012
+SAAS_LOGIN_BFF=http://192.168.0.133:4013
+SCHEDULE_SERVICE=http://192.168.0.133:4014
+SCHEMA_SERVICE=http://192.168.0.133:4015
+TASK_SERVICE=http://192.168.0.133:4016
+USER_SERVICE=http://192.168.0.133:4017
  
-export AMQPLIB_PROTOCOL=amqp
-export AMQPLIB_HOSTNAME=192.168.0.133
-export AMQPLIB_PORT=5672
-export AMQPLIB_USERNAME=
-export AMQPLIB_PASSWORD=
-export AMQPLIB_LOCALE=en_US
-export AMQPLIB_FRAMEMAX=0
-export AMQPLIB_HEARTBEAT=0
-export AMQPLIB_VHOST=/
+AMQPLIB_PROTOCOL=amqp
+AMQPLIB_HOSTNAME=192.168.0.133
+AMQPLIB_PORT=5672
+AMQPLIB_USERNAME=
+AMQPLIB_PASSWORD=
+AMQPLIB_LOCALE=en_US
+AMQPLIB_FRAMEMAX=0
+AMQPLIB_HEARTBEAT=0
+AMQPLIB_VHOST=/
  
-export QUEUE_RESULT=result.top.pipeline;result.top.ping;result.top.listCommand;result.top.histgramPlot;result.top.etlBase;result.top.dataView;result.top.createNewVariable;result.top.correlationMatrix;result.top.univariatePlot;result.outlier.train;result.outlier.preTrainImportance;result.outlier.ping;result.outlier.outlierPlot;result.outlier.listCommand;result.outlier.etl;result.outlier.deploy;result.outlier.applyWeights;result.clustering.train;result.clustering.ssPlot;result.clustering.preTrainImportance;result.clustering.ping;result.clustering.listCommand;result.clustering.etlOutlier;result.clustering.etl;result.clustering.doOutlier;result.clustering.deploy;result.clustering.applyWeights;result.clfreg.univariatePlot;result.clfreg.train;result.clfreg.preTrainImportance;result.clfreg.permutationImportance;result.clfreg.etl;result.clfreg.deploy
- 
+QUEUE_RESULT=result.top.pipeline;result.top.ping;result.top.listCommand;result.top.histgramPlot;result.top.etlBase;result.top.dataView;result.top.createNewVariable;result.top.correlationMatrix;result.top.univariatePlot;result.outlier.train;result.outlier.preTrainImportance;result.outlier.ping;result.outlier.outlierPlot;result.outlier.listCommand;result.outlier.etl;result.outlier.deploy;result.outlier.applyWeights;result.clustering.train;result.clustering.ssPlot;result.clustering.preTrainImportance;result.clustering.ping;result.clustering.listCommand;result.clustering.etlOutlier;result.clustering.etl;result.clustering.doOutlier;result.clustering.deploy;result.clustering.applyWeights;result.clfreg.univariatePlot;result.clfreg.train;result.clfreg.preTrainImportance;result.clfreg.permutationImportance;result.clfreg.etl;result.clfreg.deploy
