--- a/.env.example
+++ b/.env.example
@@ -8,37 +8,37 @@ SCHEDULE_PERIOD=60
 MAX_CONCURRENCY_SCHEDULE=2
 SECRET=FNcidLwifNC902LCC9f2C
 REDIS_SENTINEL_HOSTS=
-REDIS_HOST=192.168.0.133:6379
+REDIS_HOST=192.168.0.221:6379
 REDIS_TYPE=1
 PASSWORD=7788414
 REACT_APP_NGINX_BACKEND=1
 R2HOST=http://127.0.0.1:3000/
-APP_LOGIN_BFF=http://192.168.0.133:4001
-AUTH_SERVICE=http://192.168.0.133:4002
-DEPLOYMENT_SERVICE=http://192.168.0.133:4003
-DSL_SERVICE=http://192.168.0.133:4004
-ETL_SERVICE=http://192.168.0.133:4005
-GRAPHIC_SERVICE=http://192.168.0.133:4006
-JOB_SERVICE=http://192.168.0.133:4007
-MODEL_SERVICE=http://192.168.0.133:4008
-PLAN_SERVICE=http://192.168.0.133:4009
-PROJECT_SERVICE=http://192.168.0.133:4010
-PROPELLER_BFF=http://192.168.0.133:4011
-SAAS_BFF=http://192.168.0.133:4012
-SAAS_LOGIN_BFF=http://192.168.0.133:4013
-SCHEDULE_SERVICE=http://192.168.0.133:4014
-SCHEMA_SERVICE=http://192.168.0.133:4015
-TASK_SERVICE=http://192.168.0.133:4016
-USER_SERVICE=http://192.168.0.133:4017
- 
+APP_LOGIN_BFF=http://192.168.0.221:4001
+AUTH_SERVICE=http://192.168.0.221:4002
+DEPLOYMENT_SERVICE=http://192.168.0.221:4003
+DSL_SERVICE=http://192.168.0.221:4004
+ETL_SERVICE=http://192.168.0.221:4005
+GRAPHIC_SERVICE=http://192.168.0.221:4006
+JOB_SERVICE=http://192.168.0.221:4007
+MODEL_SERVICE=http://192.168.0.221:4008
+PLAN_SERVICE=http://192.168.0.221:4009
+PROJECT_SERVICE=http://192.168.0.221:4010
+PROPELLER_BFF=http://192.168.0.221:4011
+SAAS_BFF=http://192.168.0.221:4012
+SAAS_LOGIN_BFF=http://192.168.0.221:4013
+SCHEDULE_SERVICE=http://192.168.0.221:4014
+SCHEMA_SERVICE=http://192.168.0.221:4015
+TASK_SERVICE=http://192.168.0.221:4016
+USER_SERVICE=http://192.168.0.221:4017
+
 AMQPLIB_PROTOCOL=amqp
-AMQPLIB_HOSTNAME=192.168.0.133
+AMQPLIB_HOSTNAME=192.168.0.221
 AMQPLIB_PORT=5672
-AMQPLIB_USERNAME=
-AMQPLIB_PASSWORD=
+AMQPLIB_USERNAME=admin
+AMQPLIB_PASSWORD=admin
 AMQPLIB_LOCALE=en_US
 AMQPLIB_FRAMEMAX=0
 AMQPLIB_HEARTBEAT=0
 AMQPLIB_VHOST=/
- 
+
 QUEUE_RESULT=result.top.pipeline;result.top.ping;result.top.listCommand;result.top.histgramPlot;result.top.etlBase;result.top.dataView;result.top.createNewVariable;result.top.correlationMatrix;result.top.univariatePlot;result.outlier.train;result.outlier.preTrainImportance;result.outlier.ping;result.outlier.outlierPlot;result.outlier.listCommand;result.outlier.etl;result.outlier.deploy;result.outlier.applyWeights;result.clustering.train;result.clustering.ssPlot;result.clustering.preTrainImportance;result.clustering.ping;result.clustering.listCommand;result.clustering.etlOutlier;result.clustering.etl;result.clustering.doOutlier;result.clustering.deploy;result.clustering.applyWeights;result.clfreg.univariatePlot;result.clfreg.train;result.clfreg.preTrainImportance;result.clfreg.permutationImportance;result.clfreg.etl;result.clfreg.deploy
