--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "server": "node server",
     "ts-node": "ts-node --project ./tsconfig.server.json server",
     "nodemon": "nodemon server",
-    "build": "react-app-rewired build && rm -rf static && mv build static",
+    "build": "react-app-rewired build && rm -rf static && mv build static && yarn docker:build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker:build": "docker.exe build -t harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest . && docker.exe push harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest"
   },
   "devDependencies": {
     "@types/amqplib": "^0.5.11",
