--- a/package.json
+++ b/package.json
@@ -3,48 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.12.0",
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-router-dom": "^4.3.1",
     "amqplib": "^0.5.3",
-    "antd": "^3.10.4",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "classnames": "^2.2.6",
     "connect-redis": "^3.4.0",
     "cross-env": "^5.2.0",
-    "customize-cra": "^0.2.12",
-    "d3": "^4.13.0",
-    "easy-peasy": "^2.1.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "formidable": "^1.2.1",
     "http-proxy-middleware": "^0.19.1",
     "ioredis": "^4.2.0",
     "lodash": "^4.17.11",
-    "mobx": "^4.6.0",
-    "mobx-react": "^6.0.0-rc.4",
-    "mobx-react-router": "^4.0.5",
     "module-alias": "^2.1.0",
     "nodemailer": "^5.1.1",
     "papaparse": "^4.6.1",
     "pm2": "^2.10.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
-    "react-virtualized": "^9.21.0",
-    "typescript": "^3.3.4000",
     "uuid": "^3.3.2",
-    "ws": "^6.1.0"
+    "ws": "^6.1.0",
+    "formidable": "^1.2.1"
   },
-  "proxy": "http://localhost:9080",
+  "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-app-rewired build && rm -rf static && mv build static && node ./server/index.js",
+    "start": "node ./server/index.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
     "fdev": "react-app-rewired start & node ./server/index.js",
     "frontend": "react-app-rewired start",
@@ -57,23 +36,43 @@
     "docker:build": "docker.exe build -t harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest . && docker.exe push harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.12.0",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-router-dom": "^4.3.1",
     "@types/amqplib": "^0.5.11",
     "@types/echarts": "^4.1.9",
     "@types/lodash": "^4.14.123",
     "@types/rc-slider": "^8.6.3",
+    "antd": "^3.10.4",
+    "customize-cra": "^0.2.12",
+    "d3": "^4.13.0",
+    "easy-peasy": "^2.1.5",
     "babel-plugin-import": "^1.11.0",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "echarts-gl": "^1.1.1",
     "mobx-react-devtools": "^5.0.1",
-    "node-sass": "^4.10.0",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
     "react-app-rewired": "^2.1.1",
     "react-waypoint": "^8.1.0",
-    "sass-loader": "^6.0.7",
     "superagent": "^5.0.5",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "mobx": "^4.6.0",
+    "mobx-react": "^6.0.0-rc.4",
+    "mobx-react-router": "^4.0.5",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.8",
+    "react-virtualized": "^9.21.0",
+    "typescript": "^3.3.4000",
+    "formidable": "^1.2.1",
+    "classnames": "^2.2.6"
   },
   "_moduleAliases": {
     "wss": "server/webSocket",
