--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pm2": "^2.10.4",
     "uuid": "^3.3.2",
     "ws": "^6.1.0",
-    "formidable": "^1.2.1"
+    "formidable": "^1.2.1",
+      "rc-input-number": "4.4.2"
   },
   "proxy": "http://localhost:9080",
   "scripts": {
