--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "formidable": "^1.2.1",
     "http-proxy-middleware": "^0.19.1",
     "ioredis": "^4.2.0",
     "lodash": "^4.17.11",
@@ -20,12 +21,11 @@
     "nodemailer": "^5.1.1",
     "papaparse": "^4.6.1",
     "pm2": "^2.10.4",
+    "rc-input-number": "4.4.2",
     "uuid": "^3.3.2",
-    "ws": "^6.1.0",
-    "formidable": "^1.2.1",
-    "rc-input-number": "4.4.2"
+    "ws": "^6.1.0"
   },
-  "proxy": "http://localhost:9080",
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "node ./server/index.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
@@ -41,42 +41,42 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@types/amqplib": "^0.5.11",
+    "@types/echarts": "^4.1.9",
     "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.129",
     "@types/node": "^11.12.0",
+    "@types/rc-slider": "^8.6.3",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/amqplib": "^0.5.11",
-    "@types/echarts": "^4.1.9",
-    "@types/lodash": "^4.14.123",
-    "@types/rc-slider": "^8.6.3",
     "antd": "^3.10.4",
+    "babel-plugin-import": "^1.11.0",
+    "classnames": "^2.2.6",
     "customize-cra": "^0.2.12",
     "d3": "^4.13.0",
     "easy-peasy": "^2.1.5",
-    "babel-plugin-import": "^1.11.0",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "echarts-gl": "^1.1.1",
+    "formidable": "^1.2.1",
+    "mobx": "^4.6.0",
+    "mobx-react": "^6.0.0-rc.4",
     "mobx-react-devtools": "^5.0.1",
+    "mobx-react-router": "^4.0.5",
+    "react": "^16.8.6",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
     "react-app-rewired": "^2.1.1",
-    "react-waypoint": "^8.1.0",
-    "superagent": "^5.0.5",
-    "ts-node": "^8.1.0",
-    "mobx": "^4.6.0",
-    "mobx-react": "^6.0.0-rc.4",
-    "mobx-react-router": "^4.0.5",
-    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-virtualized": "^9.21.0",
-    "typescript": "^3.3.4000",
-    "formidable": "^1.2.1",
-    "classnames": "^2.2.6"
+    "react-waypoint": "^8.1.0",
+    "superagent": "^5.0.5",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.3.4000"
   },
   "_moduleAliases": {
     "wss": "server/webSocket",
