estimate-  add||delete

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ SCHEDULE_SERVICE=http://192.168.0.221:4014
 SCHEMA_SERVICE=http://192.168.0.221:4015
 TASK_SERVICE=http://192.168.0.221:4016
 USER_SERVICE=http://192.168.0.221:4017
+JUPYTER_LAB=http://192.168.0.23:18888/notebook/lab?token=e6aae74674c7d8bf2d2c1be984b70a1baab3bb2dad8c598c
 
 AMQPLIB_PROTOCOL=amqp
 AMQPLIB_HOSTNAME=192.168.0.221
