--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ts-node": "ts-node --project ./tsconfig.server.json server",
     "nodemon": "nodemon server",
     "build": "react-app-rewired build && rm -rf static && mv build static && yarn docker:build",
+    "build-local": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
     "docker:build": "docker.exe build -t harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest . && docker.exe push harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest"
