--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build-local": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
-    "docker:build": "docker.exe build -t harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest . && docker.exe push harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest"
+    "docker:build": "docker build -t harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest . && docker push harbor-dev.r2ai.com.cn/next-test/next-deploy2:latest"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
