--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "react-waypoint": "^8.1.0",
     "superagent": "^5.0.5",
     "ts-node": "^8.1.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "rc-slider": "latest"
   },
   "_moduleAliases": {
     "wss": "server/webSocket",
