--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-proxy-middleware": "^0.19.1",
     "ioredis": "^4.2.0",
     "lodash": "^4.17.11",
+    "log4js": "^4.3.1",
     "module-alias": "^2.1.0",
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
