--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
     "amqplib": "^0.5.3",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.4.0",
+    "create-react-app": "^2.1.8",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -33,7 +34,7 @@
     "fdev": "react-app-rewired start & node ./server/index.js",
     "frontend": "react-app-rewired start",
     "server": "node server",
-    "ts-node": "ts-node --project ./tsconfig.server.json server",
+    "ts-node": "ts-node --project server/tsconfig.json server",
     "nodemon": "nodemon server",
     "build": "react-app-rewired build && rm -rf static && mv build static && yarn docker:build",
     "build-local": "react-app-rewired build",
@@ -45,13 +46,18 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@types/amqplib": "^0.5.11",
     "@types/echarts": "^4.1.9",
+    "@types/express": "^4.16.1",
+    "@types/express-session": "^1.15.13",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.129",
     "@types/node": "^11.12.0",
+    "@types/papaparse": "^4.5.9",
     "@types/rc-slider": "^8.6.3",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "@types/react-router-dom": "^4.3.1",
+    "@types/uuid": "^3.4.4",
+    "@types/ws": "^6.0.1",
     "antd": "^3.10.4",
     "babel-plugin-import": "^1.11.0",
     "classnames": "^2.2.6",
@@ -66,6 +72,8 @@
     "mobx-react": "^6.0.0-rc.4",
     "mobx-react-devtools": "^5.0.1",
     "mobx-react-router": "^4.0.5",
+    "prettier": "^1.18.2",
+    "rc-slider": "latest",
     "react": "^16.8.6",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
@@ -77,9 +85,8 @@
     "react-virtualized": "^9.21.0",
     "react-waypoint": "^8.1.0",
     "superagent": "^5.0.5",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.3.4000",
-    "rc-slider": "latest"
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   },
   "_moduleAliases": {
     "wss": "server/webSocket",
@@ -90,9 +97,8 @@
     "command": "command"
   },
   "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
+    "last 2 versions",
+    "android 4",
+    "opera 12"
   ]
 }
