--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@types/amqplib": "^0.5.11",
+    "@types/connect-redis": "^0.0.10",
     "@types/echarts": "^4.1.9",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.13",
