--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "fdev": "react-app-rewired start & node server/index.js",
     "frontend": "react-app-rewired start",
     "server": "node server",
-    "ts-node": "ts-node --project server/tsconfig.json server",
+    "build-server": "rm -Rf ./release && tsc --project ./server/tsconfig.json",
+    "ts-node": "ts-node --project server/tsconfig.json server/server.ts",
     "nodemon": "nodemon server",
     "build": "react-app-rewired build && rm -rf static && mv build static && yarn docker:build",
     "build-local": "react-app-rewired build",
