--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "pm2": "^2.10.4",
     "rc-input-number": "4.4.2",
     "uuid": "^3.3.2",
-    "ws": "^6.1.0"
+    "ws": "^6.1.0",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2",
+    "@types/node": "^11.12.0",
+    "tslib":"1.10.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
@@ -52,7 +56,6 @@
     "@types/express-session": "^1.15.13",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.129",
-    "@types/node": "^11.12.0",
     "@types/papaparse": "^4.5.9",
     "@types/rc-slider": "^8.6.3",
     "@types/react": "^16.8.8",
@@ -86,9 +89,7 @@
     "react-scripts": "^2.1.8",
     "react-virtualized": "^9.21.0",
     "react-waypoint": "^8.1.0",
-    "superagent": "^5.0.5",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
+    "superagent": "^5.0.5"
   },
   "_moduleAliases": {
     "wss": "server/webSocket",
