--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
+    "fs-extra": "^8.0.1",
     "http-proxy-middleware": "^0.19.1",
     "ioredis": "^4.2.0",
     "lodash": "^4.17.11",
@@ -29,7 +30,7 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node release/server.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
     "fdev": "react-app-rewired start & node server/index.js",
     "frontend": "react-app-rewired start",
@@ -50,6 +51,7 @@
     "@types/echarts": "^4.1.9",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.13",
+    "@types/fs-extra": "^7.0.0",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.129",
     "@types/node": "^11.12.0",
