--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2015",
     "module": "commonjs",
     "moduleResolution": "node",
+    "lib": [
+      "esnext"
+    ],
     "sourceMap": true,
     "pretty": true,
     "noImplicitReturns": true,
