--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ TASK_SERVICE=http://192.168.0.221:4016
 USER_SERVICE=http://192.168.0.221:4017
 BACK_API_SERVICE=http://192.168.0.221:8081
 JUPYTER_LAB=http://192.168.0.23:18888/notebook/lab?token=e6aae74674c7d8bf2d2c1be984b70a1baab3bb2dad8c598c
+DASHBOARD_URL=https://192.168.0.23:16443/api/v1/namespaces/kube-system/services/https:kubernetes-dashboard:/proxy/
 
 AMQPLIB_PROTOCOL=amqp
 AMQPLIB_HOSTNAME=192.168.0.221
