--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
+    "@types/node": "^11.12.0",
     "amqplib": "^0.5.3",
     "axios": "^0.19.0",
     "body-parser": "^1.18.3",
@@ -25,12 +26,11 @@
     "papaparse": "^5.0.0",
     "pm2": "^2.10.4",
     "rc-input-number": "4.4.2",
-    "uuid": "^3.3.2",
-    "ws": "^6.1.0",
     "ts-node": "^8.3.0",
+    "tslib": "^1.10.0",
     "typescript": "^3.5.2",
-    "@types/node": "^11.12.0",
-    "tslib":"1.10.0"
+    "uuid": "^3.3.2",
+    "ws": "^6.1.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
