--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "lodash": "^4.17.11",
     "log4js": "^4.3.1",
     "module-alias": "^2.1.0",
+    "moment": "^2.24.0",
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
-    "pm2": "^2.10.4",
     "rc-input-number": "4.4.2",
     "ts-node": "^8.3.0",
     "tslib": "^1.10.0",
@@ -34,7 +34,7 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "node release/server.js",
+    "start": "node release/server/server.js",
     "dev": "react-app-rewired start & pm2 start deploy2-dev.json",
     "fdev": "react-app-rewired start & node server/index.js",
     "frontend": "react-app-rewired start",
@@ -42,7 +42,7 @@
     "build-server": "rm -Rf ./release && tsc --project ./server/tsconfig.json",
     "ts-node": "ts-node --project server/tsconfig.json server/server.ts",
     "nodemon": "nodemon server",
-    "build": "react-app-rewired build && rm -rf static && mv build static && yarn docker:build",
+    "build": "yarn build-server && react-app-rewired build && rm -rf static && mv build static && yarn docker:build",
     "build-local": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject",
