--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^11.12.0",
     "amqplib": "^0.5.3",
     "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.4.0",
     "create-react-app": "^2.1.8",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@types/amqplib": "^0.5.11",
+    "@types/bluebird": "^3.5.27",
     "@types/connect-redis": "^0.0.10",
     "@types/echarts": "^4.1.9",
     "@types/express": "^4.16.1",
