fix ts define && fix quality bug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "checkJs": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "typeRoots": [
+      "node_modules/@types",
+      "./src/types"
+    ]
   },
   "include": [
     "src"
