--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@types/node": "^11.12.0",
     "amqplib": "^0.5.3",
     "axios": "^0.19.0",
-    "bluebird": "^3.5.5",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.4.0",
     "create-react-app": "^2.1.8",
@@ -27,12 +26,12 @@
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
     "rc-input-number": "4.4.2",
+    "superagent": "^5.0.5",
     "ts-node": "^8.3.0",
     "tslib": "^1.10.0",
     "typescript": "^3.5.2",
     "uuid": "^3.3.2",
-    "ws": "^6.1.0",
-    "superagent": "^5.0.5"
+    "ws": "^6.1.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
@@ -53,7 +52,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@types/amqplib": "^0.5.11",
-    "@types/bluebird": "^3.5.27",
     "@types/connect-redis": "^0.0.10",
     "@types/echarts": "^4.1.9",
     "@types/express": "^4.16.1",
@@ -73,7 +71,6 @@
     "classnames": "^2.2.6",
     "customize-cra": "^0.2.12",
     "d3": "^4.13.0",
-    "easy-peasy": "^2.1.5",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "echarts-gl": "^1.1.1",
