--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
-    "@types/node": "^11.12.0",
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.2.1",
     "amqplib": "^0.5.3",
     "axios": "^0.19.0",
     "bluebird": "^3.5.5",
@@ -27,12 +26,12 @@
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
     "rc-input-number": "4.4.2",
+    "superagent": "^5.0.5",
     "ts-node": "^8.3.0",
     "tslib": "^1.10.0",
     "typescript": "^3.5.2",
     "uuid": "^3.3.2",
-    "ws": "^6.1.0",
-    "superagent": "^5.0.5"
+    "ws": "^6.1.0"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
@@ -58,10 +57,11 @@
     "@types/echarts": "^4.1.9",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.13",
-    "@types/fs-extra": "^7.0.0",
+    "@types/fs-extra": "^8.0.0",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.129",
-    "@types/papaparse": "^4.5.9",
+    "@types/node": "^12.6.8",
+    "@types/papaparse": "^5.0.1",
     "@types/rc-slider": "^8.6.3",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
