--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "final-form": "^4.18.2",
-    "final-form-material-ui": "^0.3.0",
     "formidable": "^1.2.1",
     "fs-extra": "^8.0.1",
     "http-proxy-middleware": "^0.19.1",
@@ -27,7 +25,6 @@
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
     "rc-input-number": "4.4.2",
-    "react-final-form": "^6.3.0",
     "superagent": "^5.0.5",
     "ts-node": "^8.3.0",
     "tslib": "^1.10.0",
@@ -108,5 +105,8 @@
     "last 2 versions",
     "android 4",
     "opera 12"
-  ]
+  ],
+  "resolutions": {
+    "antd/css-animation": "1.5.0"
+  }
 }
