--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "fs-extra": "^8.0.1",
     "http-proxy-middleware": "^0.19.1",
     "ioredis": "^4.2.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "log4js": "^4.3.1",
     "module-alias": "^2.1.0",
     "moment": "^2.24.0",
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
-    "rc-input-number": "4.4.2",
-    "superagent": "^5.0.5",
+    "superagent": "^5.1.0",
     "ts-node": "^8.3.0",
     "tslib": "^1.10.0",
     "typescript": "^3.5.2",
@@ -66,22 +65,23 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/uuid": "^3.4.4",
     "@types/ws": "^6.0.1",
-    "antd": "^3.10.4",
+    "antd": "^3.20.5",
     "babel-plugin-import": "^1.11.0",
     "classnames": "^2.2.6",
     "customize-cra": "^0.2.12",
-    "d3": "^4.13.0",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "echarts-gl": "^1.1.1",
     "formidable": "^1.2.1",
+    "katex": "^0.10.2",
     "mobx": "^4.6.0",
     "mobx-react": "^6.0.0-rc.4",
     "mobx-react-devtools": "^5.0.1",
     "mobx-react-router": "^4.0.5",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "rc-slider": "latest",
+    "rc-slider": "8.6.13",
+    "rc-input-number": "4.4.2",
     "react": "^16.8.6",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
