--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
-    "amqplib": "^0.5.3",
+    "amqplib": "0.5.3",
     "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.4.0",
