--- a/package.json
+++ b/package.json
@@ -6,30 +6,30 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
-    "amqplib": "0.5.3",
+    "amqplib": "^0.5.5",
     "axios": "^0.19.0",
-    "body-parser": "^1.18.3",
-    "connect-redis": "^3.4.0",
+    "body-parser": "^1.19.0",
+    "connect-redis": "^3.4.2",
     "create-react-app": "^2.1.8",
     "cross-env": "^5.2.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "formidable": "^1.2.1",
-    "fs-extra": "^8.0.1",
+    "fs-extra": "^8.1.0",
     "http-proxy-middleware": "^0.19.1",
-    "ioredis": "^4.2.0",
+    "ioredis": "^4.11.2",
     "lodash": "^4.17.15",
-    "log4js": "^4.3.1",
-    "module-alias": "^2.1.0",
+    "log4js": "^4.5.1",
+    "module-alias": "^2.2.0",
     "moment": "^2.24.0",
     "nodemailer": "^5.1.1",
     "papaparse": "^5.0.0",
     "superagent": "^5.1.0",
     "ts-node": "^8.3.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.5.2",
+    "typescript": "^3.5.3",
     "uuid": "^3.3.2",
-    "ws": "^6.1.0"
+    "ws": "^6.2.1"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
@@ -49,48 +49,48 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@types/amqplib": "^0.5.11",
+    "@types/amqplib": "^0.5.13",
     "@types/connect-redis": "^0.0.10",
     "@types/echarts": "^4.1.9",
-    "@types/express": "^4.16.1",
+    "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/fs-extra": "^8.0.0",
-    "@types/jest": "^24.0.11",
-    "@types/lodash": "^4.14.129",
+    "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
     "@types/papaparse": "^5.0.1",
-    "@types/rc-slider": "^8.6.3",
-    "@types/react": "^16.8.8",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/uuid": "^3.4.4",
+    "@types/rc-slider": "^8.6.4",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/uuid": "^3.4.5",
     "@types/ws": "^6.0.1",
-    "antd": "^3.20.5",
-    "babel-plugin-import": "^1.11.0",
+    "antd": "^3.20.7",
+    "babel-plugin-import": "^1.12.0",
     "classnames": "^2.2.6",
-    "customize-cra": "^0.2.12",
+    "customize-cra": "^0.2.14",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
     "echarts-gl": "^1.1.1",
     "formidable": "^1.2.1",
     "katex": "^0.10.2",
-    "mobx": "^4.6.0",
+    "mobx": "^4.13.0",
     "mobx-react": "^6.0.0-rc.4",
     "mobx-react-devtools": "^5.0.1",
-    "mobx-react-router": "^4.0.5",
+    "mobx-react-router": "^4.0.7",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "rc-slider": "8.6.13",
-    "rc-input-number": "4.4.2",
+    "rc-slider": "^8.6.13",
+    "rc-input-number": "^4.4.2",
     "react": "^16.8.6",
     "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
     "react-app-rewire-mobx": "^1.0.9",
-    "react-app-rewired": "^2.1.1",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
-    "react-virtualized": "^9.21.0",
+    "react-virtualized": "^9.21.1",
     "react-waypoint": "^8.1.0"
   },
   "_moduleAliases": {
